--- a/package.json
+++ b/package.json
@@ -1,27 +1,18 @@
 {
   "name": "simpleutils",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
   "main": "utils.js",
   "scripts": {
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
-    "prestart": "",
-    "pree2e": "webdriver-manager update",
-    "e2e": "protractor",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "ntsc": "ntsc",
     "ntsc:w": "ntsc -w",
     "build": "gulp build",
     "clean": "shx rm -Rf build/",
-    "gulp": "gulp",
-    "electronStart": "electron .",
-    "tryWeb": "npm-run-all build lite",
-    "tryDesktop": "npm-run-all build electron",
-    "packDesktop": "electron-packager . --platform=all --arch=all --overwrite --icon=favicon.ico --ignore=node_modules/electron-*",
-    "packDesktopX64": "electron-packager . --platform=all --arch=x64 --overwrite --icon=favicon.ico --ignore=node_modules/electron-*",
-    "packDesktopWinX64": "electron-packager . --platform=win32 --arch=x64 --overwrite --icon=favicon.ico --ignore=node_modules/electron-*"
+    "gulp": "gulp"
   },
   "repository": {
     "type": "git",
@@ -34,7 +25,7 @@
   },
   "homepage": "https://github.com/Judahh/simpleUtils#readme",
   "dependencies": {
-    "@types/node": "8.0.24"
+    "@types/node": "10.5.4"
   },
   "devDependencies": {}
 }
