--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "Simple Utils",
   "main": "utils.js",
   "scripts": {
-    "postinstall": "tsc",
+    "postinstall": "",
+    "prepublish": "",
+    "build": "tsc",
     "lint": "tslint \"src/**/*.ts\"",
-    "test": "ng test",
+    "test": "jest --passWithNoTests",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "ntsc": "ntsc",
     "ntsc:w": "ntsc -w",
-    "build": "gulp build",
-    "clean": "shx rm -Rf build/",
-    "gulp": "gulp"
+    "clean": "shx rm -Rf build/"
   },
   "repository": {
     "type": "git",
@@ -26,10 +26,13 @@
   },
   "homepage": "https://github.com/Judahh/simpleUtils#readme",
   "dependencies": {
-    "tslint": "5.20.1"
   },
   "devDependencies": {
-    "typescript": "3.7.4",
-    "@types/node": "13.1.4"
+    "@types/jest": "^24.9.0",
+    "@types/node": "13.1.7",
+    "ts-jest": "^24.3.0",
+    "tslint": "^5.20.1",
+    "typescript": "3.7.5",
+    "jest": "^24.9.0"
   }
 }
