--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "url": "https://github.com/Judahh/simpleUtils/issues"
   },
   "homepage": "https://github.com/Judahh/simpleUtils#readme",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^26.0.17",
     "@types/node": "13.1.7",
