--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -3,35 +3,43 @@ name: Test
 on:
   pull_request:
     branches:
-      - '*'         # matches every branch
-      - '*/*'       # matches every branch containing a single '/'
-      - '!master'   # excludes master
+      - "*" # matches every branch
+      - "*/*" # matches every branch containing a single '/'
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
+    # runs all of the steps inside the specified container rather than on the VM host.
+    # Because of this the network configuration changes from host based network to a container network.
+    container:
+      image: node:10.16-jessie
+
     strategy:
       matrix:
-        node-version: [12.x, 13.x]
+        node-version: [14.x]
 
     steps:
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: Checkout
-      uses: actions/checkout@v1
-    - name: Install
-      uses: borales/actions-yarn@v2.0.0
-      with:
-        cmd: install # will run `yarn install` command
-    - name: Build
-      uses: borales/actions-yarn@v2.0.0
-      with:
-        cmd: build # will run `yarn build` command
-    - name: Test
-      uses: borales/actions-yarn@v2.0.0
-      with:
-        cmd: test # will run `yarn test` command
-
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@main
+        with:
+          node-version: ${{ matrix.node-version }}
+          registry-url: https://registry.npmjs.org
+      - name: Checkout
+        uses: actions/checkout@main
+      - name: Install
+        uses: borales/actions-yarn@master
+        with:
+          cmd: install # will run `yarn install` command
+      - name: Build
+        uses: borales/actions-yarn@master
+        with:
+          cmd: build # will run `yarn build` command
+      - name: Test
+        uses: borales/actions-yarn@master
+        with:
+          cmd: test # will run `yarn test` command
+      - name: Test Integration
+        uses: borales/actions-yarn@master
+        with:
+          cmd: integration # will run `yarn test` command
