--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "url": "https://github.com/Judahh/simpleUtils/issues"
   },
   "homepage": "https://github.com/Judahh/simpleUtils#readme",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/jest": "latest",
     "@types/node": "latest",
